load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:pm2/package_json.bzl", pm2_bin = "bin")
load("@pip_macos_arm64//:requirements.bzl", requirement_macos_arm64 = "requirement")
load("@pip_linux_x86_64//:requirements.bzl", requirement_linux_x86_64 = "requirement")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_library", "nogo")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@rules_rust//rust:defs.bzl", "rust_binary")

npm_link_all_packages(name = "node_modules")

pm2_bin.pm2_binary(
    name = "pm2_cli",
    visibility = ["//cmd/serve:__pkg__"],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "//:requirements.in",
    requirements_txt = "//:requirements.txt",
)

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

alias(
    name = "absl_py",
    actual = select({
        ":linux_x86_64": requirement_linux_x86_64("absl-py"),
        ":macos_arm64": requirement_macos_arm64("absl-py"),
        "//conditions:default": "@platforms//:incompatible",
    }),
)

alias(
    name = "pip_requirements_parser",
    actual = select({
        ":linux_x86_64": requirement_linux_x86_64("pip-requirements-parser"),
        ":macos_arm64": requirement_macos_arm64("pip-requirements-parser"),
        "//conditions:default": "@platforms//:incompatible",
    }),
)

py_binary(
    name = "lzma",
    srcs = ["lzma.py"],
    deps = [":absl_py"],
)

py_binary(
    name = "requirements_patcher",
    srcs = ["requirements.py"],
    deps = [
        ":absl_py",
        ":pip_requirements_parser",
    ],
)

run_binary(
    name = "requirements_patched",
    srcs = ["requirements.txt"],
    outs = ["requirements_patched_out"],
    args = [
        "--input",
        "$(execpath requirements.txt)",
        "--output",
        "$@",
        "--exclude",
        "fire",
        "--exclude",
        "pdf2docx",
        "--exclude",
        "pymupdf",
    ],
    tool = ":requirements_patcher",
)

write_source_file(
    name = "requirements.patch",
    in_file = ":requirements_patched",
    out_file = "requirements.patched.txt",
)

run_binary(
    name = "libgomp_tar",
    srcs = ["@libgomp_x86_64//:data.tar.xz"],
    outs = ["libgomp.tar"],
    args = [
        "--input",
        "$(execpath @libgomp_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libgl_tar",
    srcs = ["@libgl_x86_64//:data.tar.xz"],
    outs = ["libgl.tar"],
    args = [
        "--input",
        "$(execpath @libgl_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglib_tar",
    srcs = ["@libglib_x86_64//:data.tar.xz"],
    outs = ["libglib.tar"],
    args = [
        "--input",
        "$(execpath @libglib_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglvnd_tar",
    srcs = ["@libglvnd_x86_64//:data.tar.xz"],
    outs = ["libglvnd.tar"],
    args = [
        "--input",
        "$(execpath @libglvnd_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglx_tar",
    srcs = ["@libglx_x86_64//:data.tar.xz"],
    outs = ["libglx.tar"],
    args = [
        "--input",
        "$(execpath @libglx_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libx11_tar",
    srcs = ["@libx11_x86_64//:data.tar.xz"],
    outs = ["libx11.tar"],
    args = [
        "--input",
        "$(execpath @libx11_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxcb_tar",
    srcs = ["@libxcb_x86_64//:data.tar.xz"],
    outs = ["libxcb.tar"],
    args = [
        "--input",
        "$(execpath @libxcb_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxau_tar",
    srcs = ["@libxau_x86_64//:data.tar.xz"],
    outs = ["libxau.tar"],
    args = [
        "--input",
        "$(execpath @libxau_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxdmcp_tar",
    srcs = ["@libxdmcp_x86_64//:data.tar.xz"],
    outs = ["libxdmcp.tar"],
    args = [
        "--input",
        "$(execpath @libxdmcp_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libbsd_tar",
    srcs = ["@libbsd_x86_64//:data.tar.xz"],
    outs = ["libbsd.tar"],
    args = [
        "--input",
        "$(execpath @libbsd_x86_64//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = [
        "//atlas:__pkg__",
        "//cmd/serve:__pkg__",
        "//paddle_ocr:__pkg__",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    visibility = [
        "//atlas:__pkg__",
        "//cmd/serve:__pkg__",
        "//paddle_ocr:__pkg__",
    ],
)

# gazelle:prefix github.com/sunb26/xat

# https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md#generating-build-files
gazelle(name = "gazelle")

go_library(
    name = "xat_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/sunb26/xat",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "xat_go",
    embed = [":xat_go_lib"],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "xat_rust",
    srcs = ["main.rs"],
)

py_binary(
    name = "xat_py",
    srcs = ["main.py"],
    main = "main.py",
)

exports_files([".rustfmt.toml"])
