load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:pm2/package_json.bzl", pm2_bin = "bin")
load("@pip_aarch64-apple-darwin//:requirements.bzl", requirement_aarch64_apple_darwin = "requirement")
load("@pip_x86_64-unknown-linux//:requirements.bzl", requirement_x86_64_unknwon_linux = "requirement")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_binary", "go_library", "nogo")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@rules_rust//rust:defs.bzl", "rust_binary")

buildifier(name = "buildifier")
buildifier_test(name = "buildifier_test")

npm_link_all_packages(name = "node_modules")

pm2_bin.pm2_binary(
    name = "pm2_cli",
    visibility = ["//cmd/serve:__pkg__"],
)

compile_pip_requirements(
    name = "requirements",
    requirements_in = "//:requirements.in",
    requirements_txt = "//:requirements.txt",
)

nogo(
    name = "nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

alias(
    name = "absl_py",
    actual = select({
        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": requirement_x86_64_unknwon_linux("absl-py"),
        "@rules_rust//rust/platform:aarch64-apple-darwin": requirement_aarch64_apple_darwin("absl-py"),
        "//conditions:default": "@platforms//:incompatible",
    }),
)

alias(
    name = "pip_requirements_parser",
    actual = select({
        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": requirement_x86_64_unknwon_linux("pip-requirements-parser"),
        "@rules_rust//rust/platform:aarch64-apple-darwin": requirement_aarch64_apple_darwin("pip-requirements-parser"),
        "//conditions:default": "@platforms//:incompatible",
    }),
)

py_binary(
    name = "lzma",
    srcs = ["lzma.py"],
    deps = [":absl_py"],
)

py_binary(
    name = "requirements_patcher",
    srcs = ["requirements.py"],
    deps = [
        ":absl_py",
        ":pip_requirements_parser",
    ],
)

run_binary(
    name = "requirements_patched",
    srcs = ["requirements.txt"],
    outs = ["requirements_patched_out"],
    args = [
        "--input",
        "$(execpath requirements.txt)",
        "--output",
        "$@",
        "--exclude",
        "fire",
        "--exclude",
        "pdf2docx",
        "--exclude",
        "pymupdf",
    ],
    tool = ":requirements_patcher",
)

write_source_file(
    name = "requirements.patch",
    in_file = ":requirements_patched",
    out_file = "requirements.patched.txt",
)

run_binary(
    name = "libgomp_tar",
    srcs = ["@libgomp_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libgomp.tar"],
    args = [
        "--input",
        "$(execpath @libgomp_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libgl_tar",
    srcs = ["@libgl_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libgl.tar"],
    args = [
        "--input",
        "$(execpath @libgl_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglib_tar",
    srcs = ["@libglib_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libglib.tar"],
    args = [
        "--input",
        "$(execpath @libglib_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglvnd_tar",
    srcs = ["@libglvnd_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libglvnd.tar"],
    args = [
        "--input",
        "$(execpath @libglvnd_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libglx_tar",
    srcs = ["@libglx_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libglx.tar"],
    args = [
        "--input",
        "$(execpath @libglx_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libx11_tar",
    srcs = ["@libx11_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libx11.tar"],
    args = [
        "--input",
        "$(execpath @libx11_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxcb_tar",
    srcs = ["@libxcb_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libxcb.tar"],
    args = [
        "--input",
        "$(execpath @libxcb_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxau_tar",
    srcs = ["@libxau_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libxau.tar"],
    args = [
        "--input",
        "$(execpath @libxau_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libxdmcp_tar",
    srcs = ["@libxdmcp_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libxdmcp.tar"],
    args = [
        "--input",
        "$(execpath @libxdmcp_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

run_binary(
    name = "libbsd_tar",
    srcs = ["@libbsd_x86_64-unknown-linux//:data.tar.xz"],
    outs = ["libbsd.tar"],
    args = [
        "--input",
        "$(execpath @libbsd_x86_64-unknown-linux//:data.tar.xz)",
        "--output",
        "$@",
    ],
    tool = ":lzma",
    visibility = ["//cmd/serve:__pkg__"],
)

# gazelle:prefix github.com/sunb26/xat

# https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md#generating-build-files
gazelle(name = "gazelle")

go_library(
    name = "xat_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/sunb26/xat",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "xat_go",
    embed = [":xat_go_lib"],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "xat_rust",
    srcs = ["main.rs"],
)

py_binary(
    name = "xat_py",
    srcs = ["main.py"],
    main = "main.py",
)

exports_files([".rustfmt.toml"])
