load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/bazel-contrib/toolchains_llvm/blob/2ab388c43537aebd1763a335ae6a35fbeea73386/tests/MODULE.bazel#L172
# use Module.bazel after hack in above link with overriden toolchain is resolved in
# https://github.com/bazel-contrib/toolchains_llvm/issues/234
http_archive(
  name = "toolchains_llvm",
  sha256 = "b7cd301ef7b0ece28d20d3e778697a5e3b81828393150bed04838c0c52963a01",
  strip_prefix = "toolchains_llvm-0.10.3",
  canonical_id = "0.10.3",
  url = "https://github.com/grailbio/bazel-toolchain/releases/download/0.10.3/toolchains_llvm-0.10.3.tar.gz",
)
load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")
bazel_toolchain_dependencies()
load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")
LLVM_VERSION = "16.0.4"
llvm_toolchain(name = "llvm_toolchain", llvm_version = LLVM_VERSION)
load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
llvm_register_toolchains()
# https://github.com/bazel-contrib/toolchains_llvm/blob/2ab388c43537aebd1763a335ae6a35fbeea73386/tests/WORKSPACE.bzlmod#L5C1-L17C2
# This sysroot is used by github.com/vsco/bazel-toolchains.
http_archive(
  name = "org_chromium_sysroot_linux_x64",
  build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
  sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
  urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)
LLVM_VERSIONS = {"": LLVM_VERSION}
llvm_toolchain(
  name = "llvm_toolchain_with_sysroot",
  llvm_versions = LLVM_VERSIONS,
  sysroot = {"linux-x86_64": "@org_chromium_sysroot_linux_x64//:sysroot"},
  toolchain_roots = {"": "@llvm_toolchain_llvm//"},
)
