load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/bazel-contrib/toolchains_llvm/blob/2ab388c43537aebd1763a335ae6a35fbeea73386/tests/MODULE.bazel#L172
# use Module.bazel after hack in above link with overriden toolchain is resolved in
# https://github.com/bazel-contrib/toolchains_llvm/issues/234
http_archive(
  name = "toolchains_llvm",
  sha256 = "b7cd301ef7b0ece28d20d3e778697a5e3b81828393150bed04838c0c52963a01",
  strip_prefix = "toolchains_llvm-0.10.3",
  canonical_id = "0.10.3",
  url = "https://github.com/grailbio/bazel-toolchain/releases/download/0.10.3/toolchains_llvm-0.10.3.tar.gz",
)
load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")
bazel_toolchain_dependencies()
load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")
LLVM_VERSION = "16.0.4"
llvm_toolchain(name = "llvm_toolchain", llvm_version = LLVM_VERSION)
load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
llvm_register_toolchains()
# https://github.com/bazel-contrib/toolchains_llvm/blob/2ab388c43537aebd1763a335ae6a35fbeea73386/tests/WORKSPACE.bzlmod#L5C1-L17C2
# This sysroot is used by github.com/vsco/bazel-toolchains.
http_archive(
  name = "org_chromium_sysroot_linux_x64",
  build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
  sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
  urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)
LLVM_VERSIONS = {"": LLVM_VERSION}
llvm_toolchain(
  name = "llvm_toolchain_with_sysroot",
  llvm_versions = LLVM_VERSIONS,
  sysroot = {"linux-x86_64": "@org_chromium_sysroot_linux_x64//:sysroot"},
  toolchain_roots = {"": "@llvm_toolchain_llvm//"},
)

http_archive(
  name = "rules_rust",
  integrity = "sha256-ZQGWDD5NoySV0eEAfe0HaaU0yxlcMN6jaqVPnYo/A2E=",
  urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.38.0/rules_rust-v0.38.0.tar.gz"],
)
load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains", "rust_repository_set")
rules_rust_dependencies()
rust_register_toolchains(edition = "2021", versions = ["1.76.0"])
load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository", "render_config")
crates_repository(
  name = "crates",
  cargo_lockfile = "//:Cargo.lock",
  lockfile = "//:Cargo.bazel.lock",
  packages = {
    "color-eyre": crate.spec(version = "0.6.2"),
    "eyre": crate.spec(version = "0.6.12"),
  },
)
load("@crates//:defs.bzl", "crate_repositories")
crate_repositories()
load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_dependencies")
rust_analyzer_dependencies()
